--- a/tests/parsing/scripts/modifiers.yaml
+++ b/tests/parsing/scripts/modifiers.yaml
@@ -7,40 +7,40 @@ tests:
   categories:
   - modifier_defs
   tests:
-  - script: 'name<-[]'
+  - script: 'name<-:[]'
     result:
       _class: ModifierDef
       target: 'name'
-      parameters: []
-      definition: []
-  - script: 'name<-()[]'
+      parameters: null
+      definition: null
+  - script: 'name<-():[]'
     result:
       _class: ModifierDef
       target: 'name'
-      parameters: []
-      definition: []
-  - script: 'name <- () 1'
+      parameters: null
+      definition: null
+  - script: 'name <- (): 1'
     result:
       _class: ModifierDef
       target: 'name'
-      parameters: []
+      parameters: null
       definition: 1
-  - script: 'name<-1d6'
+  - script: 'name<-:1d6'
     result:
       _class: ModifierDef
       target: name
-      parameters: []
+      parameters: null
       definition:
         _class: Dice
         number_of_dice: 1
         sides: 6
-  - script: 'name<-(param)[]'
+  - script: 'name<-(param):[]'
     result:
       _class: ModifierDef
       target: 'name'
       parameters: ['param']
-      definition: []
-  - script: 'name<-(param1) 1 + 2'
+      definition: null
+  - script: 'name<-(param1): 1 + 2'
     result:
       _class: ModifierDef
       target: 'name'
@@ -50,7 +50,7 @@ tests:
         left: 1
         op: '+'
         right: 2
-  - script: 'name<-(param1) ? + 2'
+  - script: 'name<-(param1): ? + 2'
     result:
       _class: ModifierDef
       target: 'name'
@@ -62,7 +62,7 @@ tests:
           value: SUBJECT
         op: '+'
         right: 2
-  - script: 'name<-(param1, param2) param1 + param2'
+  - script: 'name<-(param1, param2): param1 + param2'
     result:
       _class: ModifierDef
       target: 'name'
@@ -74,7 +74,7 @@ tests:
         left: 'param1'
         op: '+'
         right: 'param2'
-  - script: 'name<-(param1, param2) [param1 + param2]'
+  - script: 'name<-(param1, param2): [param1 + param2]'
     result:
       _class: ModifierDef
       target: 'name'
@@ -82,11 +82,11 @@ tests:
       - 'param1'
       - 'param2'
       definition:
-      - _class: BinaryOp
+        _class: BinaryOp
         left: 'param1'
         op: '+'
         right: 'param2'
-  - script: 'name<-(param1, param2)[ ?{1} = 3 ]'
+  - script: 'name<-(param1, param2):[ ?{1} = 3 ]'
     result:
       _class: ModifierDef
       target: 'name'
@@ -104,7 +104,7 @@ tests:
           - _class: Reduce
             value: 1
         value: 3
-  - script: 'name<-(param1, param2)[
+  - script: 'name<-(param1, param2):[
             param1 + param2
             ?{1} = 3
         ]'
